exports[`<AppManagementBlock /> render matches snapshots with all group combinations 1`] = `
<div>
  <div
    className="app-management">
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={undefined}
          checked={false}
          className=""
          data-checked={false}
          id="Available-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Available" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Available
        </span>
      </label>
    </div>
    <div
      className="checkbox disabled">
      <label>
        <input
          aria-disabled={true}
          checked={false}
          className="disabled"
          data-checked={false}
          id="Recommended-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Recommended" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Recommended
        </span>
      </label>
    </div>
    <a
      className="fn-primary"
      href="/mdm"
      onClick={[Function anonymous]}>
      Push to MDM
    </a>
  </div>
</div>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 2`] = `
<div>
  <div
    className="app-management">
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={undefined}
          checked={true}
          className=""
          data-checked={true}
          id="Available-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Available" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Available
        </span>
      </label>
    </div>
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={false}
          checked={false}
          className=""
          data-checked={false}
          id="Recommended-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Recommended" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Recommended
        </span>
      </label>
    </div>
    <a
      className="fn-primary"
      href="/mdm"
      onClick={[Function anonymous]}>
      Push to MDM
    </a>
  </div>
</div>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 3`] = `
<div>
  <div
    className="app-management">
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={undefined}
          checked={true}
          className=""
          data-checked={true}
          id="Available-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Available" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Available
        </span>
      </label>
    </div>
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={false}
          checked={true}
          className=""
          data-checked={true}
          id="Recommended-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Recommended" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Recommended
        </span>
      </label>
    </div>
    <a
      className="fn-primary"
      href="/mdm"
      onClick={[Function anonymous]}>
      Push to MDM
    </a>
  </div>
</div>
`;

exports[`<AppManagementBlock /> render matches snapshots with all group combinations 4`] = `
<div>
  <div
    className="app-management">
    <div
      className="checkbox ">
      <label>
        <input
          aria-disabled={undefined}
          checked={false}
          className=""
          data-checked={false}
          id="Available-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Available" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Available
        </span>
      </label>
    </div>
    <div
      className="checkbox disabled">
      <label>
        <input
          aria-disabled={true}
          checked={true}
          className="disabled"
          data-checked={true}
          id="Recommended-123"
          onChange={[Function bound onChange]}
          type="checkbox"
          value="Recommended" />
        <span
          className="cr" />
        <span
          className="layer-label">
          Recommended
        </span>
      </label>
    </div>
    <a
      className="fn-primary"
      href="/mdm"
      onClick={[Function anonymous]}>
      Push to MDM
    </a>
  </div>
</div>
`;
